// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-a6b3add2-1 fdjTpL undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-a6b3add2-2 ifpeQA undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
